# Krysalis

./: .gitignore  .gitmodules  BuildKrysalis.py  CMakeLists.txt  Cargo.toml  Common.props  Directory.Build.props  Krysalis.py  Krysalis.sln  LICENSE  README.md  TestKrysalis.py
.github/workflows/: ci.yml
ExampleMod/: Krysalis.csproj
Krysalis/: Krysalis.cs  Krysalis.csproj  Utils.cs  app.config
Krysalis/Properties/: AssemblyInfo.cs
KrysalisHAL/: Cargo.toml
KrysalisHAL/src/: lib.rs
KrysalisManaged/: CMakeLists.txt  Krysalis.cs  Krysalis.csproj  KrysalisManaged.cs  KrysalisManaged.csproj  Utils.cs
KrysalisManaged/Properties/: AssemblyInfo.cs
KrysalisManagedAPI/: KrysalisManagedAPI.cs  KrysalisManagedAPI.csproj
KrysalisManagedFFI/: KrysalisManagedFFI.cs  KrysalisManagedFFI.csproj
KrysalisManagedTestApplication/: KrysalisManagedTestApplication.cs  KrysalisManagedTestApplication.csproj
KrysalisManagedTestRunner/: KrysalisManagedTestApplication.cs  KrysalisManagedTestRunner.cs  KrysalisManagedTestRunner.csproj
KrysalisManagedTests/: KrysalisManagedTests.cs  KrysalisManagedTests.csproj  Test.cs  Tests.cs  UnitTest1.cs
KrysalisManagedTests/Properties/: AssemblyInfo.cs
KrysalisManagedWrapper/: KrysalisManagedWrapper.cs  KrysalisManagedWrapper.csproj
KrysalisMod/: KrysalisMod.cs  KrysalisMod.csproj
KrysalisNative/: CMakeLists.txt  Cargo.toml  KrysalisNative.cpp  KrysalisNative.h  KrysalisNative.vcxproj  KrysalisNative.vcxproj.filters  SceneBuilder.cpp  SceneBuilder.h  TestUtils.cpp  TestUtils.h  Utils.cpp  Utils.h  packages.config  stb_image_impl.cpp
KrysalisNative/src/: lib.rs  texture.rs  triangle.rs
KrysalisNativeAPI/: Cargo.toml
KrysalisNativeAPI/src/: lib.rs
KrysalisNativeFFI/: Cargo.toml
KrysalisNativeFFI/src/: lib.rs
KrysalisNativeTestApplication/: Cargo.toml
KrysalisNativeTestRunner/: Cargo.toml
KrysalisNativeTests/: CMakeLists.txt  Cargo.toml  KrysalisNativeTests.cpp  KrysalisNativeTests.vcxproj  KrysalisNativeTests.vcxproj.filters  Test.cpp  Test.h  Tests.cpp
KrysalisNativeTests/src/: lib.rs  main.rs
KrysalisNativeWrapper/: Cargo.toml
KrysalisNativeWrapper/src/: lib.rs
KrysalisRenderer/: Cargo.toml
KrysalisRenderer/src/: lib.rs
assets/materials/: lit.mat  testUnlit.mat  texturedLitEmissive.mat
assets/materials/triangle/: triangle.vert
assets/scenes/: testScene.json
src/Krysalis-Managed/: Krysalis-Managed.cs  Krysalis-Managed.csproj
src/Krysalis-Managed/Properties/: AssemblyInfo.cs
src/Krysalis-Native/: Krysalis-Native.vcxproj
src/KrysalisManaged/: KrysalisManaged.cs
