[package]
name = "KrysalisHAL"
version = "0.1.0"
edition = "2021"

[dependencies]

#[target.'cfg(target_os = "linux")'.dependencies]
#ash = "0.38"

#[target.'cfg(target_os = "windows")'.dependencies]
#windows = "0.58"

#[target.'cfg(target_os = "macos")'.dependencies]
#metal = "0.29"

[lib]
crate-type = ["cdylib", "rlib"]
